[package]
name = "rrss2imap"
version = "0.1.1"
authors = ["Nicolas Delsaux <nicolas.delsaux@zenika.com>"]
description = "A simple script that exposes RSS entries as mail messages, pushed directly using IMAP"
homepage = "https://github.com/Riduidel/rrss2imap"
repository = "https://github.com/Riduidel/rrss2imap"
readme = "README.md"
keywords = ["RSS", "Atom", "IMAP", "command-line", "script"]
categories = ["command-line-utilities", "email"]
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.6"
flexi_logger = "0.10.5"
# Used for parsing command line args
structopt = "0.2"
# Used for reading/writing config file
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# Used for import/export TODO replace by quick-xml
treexml = "0.7"
# Used to get feed entries (and images, when it will be possible)
atom_syndication = "0.6.0"
rss = "1.6.1"
chrono = { version = "0.4", features = ["serde"] }
# A good html parser to allow generation of valid mail messages
# kuchiki is in fact a layer over html5ever, which adds easier tree traversal/transformation
kuchiki = "0.7.2"
# And an imap connector, obviously
imap = "0.10"
native-tls = "0.2.2"
# Used to generate html text messages from initial entries
tera = "0.11"
# Allows to easily start tera
lazy_static = "1.2.0"
base64 = "0.10.1"
quoted_printable = "0.4.0"
requests = "0.0.30"
xhtmlchardet = "2.0.0"

[dev-dependencies]
assert_cli = "0.6"