[package]
name = "rrss2imap"
version = "0.2.34"
authors = ["Nicolas Delsaux <nicolas.delsaux@gmx.fr>"]
description = "A simple script that exposes RSS entries as mail messages, pushed directly using IMAP"
homepage = "https://github.com/Riduidel/rrss2imap"
repository = "https://github.com/Riduidel/rrss2imap"
readme = "README.md"
keywords = ["RSS", "Atom", "IMAP", "command-line", "script"]
categories = ["command-line-utilities", "email"]
license = "GPL-3.0-or-later"
edition = "2018"
# This is only valid for the archive available in crates.io, not for the generated executable
include = [ "templates/*", "src/**/*", "Cargo.toml" ]

[badges]
travis-ci = { repository = "Riduidel/rrss2imap", branch = "master" }
is-it-maintained-issue-resolution = { repository = "riduidel/rrss2imap" }
is-it-maintained-open-issues = { repository = "riduidel/rrss2imap" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
flexi_logger = "0.14.5"
# Used for parsing command line args
structopt = "0.3.4"
# Used for reading/writing config file
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# Used for import/export TODO replace by quick-xml
treexml = "0.7"
# Used to get feed entries (and images, when it will be possible)
atom_syndication = "0.6"
rss = "1.8"
chrono = { version = "0.4", features = ["serde"] }
rfc822_sanitizer = "0.3.3"
# A good html parser to allow generation of valid mail messages
# kuchiki is in fact a layer over html5ever, which adds easier tree traversal/transformation
kuchiki = "0.7"
# And an imap connector, obviously
imap = "1.0"
native-tls = "0.2"
# Used to generate html text messages from initial entries
tera = "0.11"
# Allows to easily start tera
lazy_static = "1.4.0"
base64 = "0.11.0"
reqwest = "0.9.22"
openssl-probe = "0.1.2"
xhtmlchardet = "2.0"
human-panic = "1.0"
url = "2.1.0"
tree_magic = "0.2"
emailmessage = "0.2"
unidecode = "0.3.0"
regex = "1.3.1"
custom_error = "1.7.1"

[dev-dependencies]
assert_cli = "0.6"
