[package]
name = "rrss2imap"
version = "0.4.1"
authors = ["Nicolas Delsaux <nicolas.delsaux@gmx.fr>"]
description = "A simple script that exposes RSS entries as mail messages, pushed directly using IMAP"
homepage = "https://github.com/Riduidel/rrss2imap"
repository = "https://github.com/Riduidel/rrss2imap"
readme = "README.md"
keywords = ["RSS", "Atom", "IMAP", "command-line", "script"]
categories = ["command-line-utilities", "email"]
license = "GPL-3.0-or-later"
edition = "2018"
# This is only valid for the archive available in crates.io, not for the generated executable
include = [ "templates/*", "src/**/*", "Cargo.toml" ]
# This allows renaming of tag name to be consistent with already long history of rrss2imap versions

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[badges]
travis-ci = { repository = "Riduidel/rrss2imap", branch = "master" }
is-it-maintained-issue-resolution = { repository = "riduidel/rrss2imap" }
is-it-maintained-open-issues = { repository = "riduidel/rrss2imap" }
maintenance = { status = "actively-developed" }

[dependencies]
# logging interface for Rust
log = "0.4"
# chosen logger implementation allowing easy configuration
flexi_logger = "0.25"
# Used for parsing command line args
structopt = "0.3"
# Used for reading/writing config file
serde = "1.0"
# macro implementation for serde easy usage
serde_derive = "1.0"
# allow reading and writing to json
serde_json = "1.0"
# Used for import/export TODO replace by quick-xml
treexml = "0.7"
# Used to get feed entries (and images, when it will be possible)
atom_syndication = "0.12"
rss = "2.0"
# time handling
chrono = { version = "0.4", features = ["serde"] }
# Fixing poorly formatted dates !
rfc822_sanitizer = "0.3"
# And an imap connector, obviously
imap = "2.3"
native-tls = "0.2"
# Allows to easily start tera
lazy_static = "1.4"
lol_html = "1.0"
base64 = "0.21"
# A lightweight http client (with no default support for async/await)
ureq = "2.6"
# Detects and uses SSL certificates store
openssl-probe = "0.1"
xhtmlchardet = "2.1"
human-panic = "1.0"
url = "2.1"
tree_magic_mini = "3.0"
mail-builder = "0.3"
unidecode = "0.3"
regex = "1.5"
custom_error = "1.8"
directories = "5.0"
tests_bin = "1.0"

[dev-dependencies]
assert_cli = "0.6"
spectral = "0.6"
